# HaskellHelloWorld

./: Makefile.am  configure.ac
src/: HaskellHelloWorld.hs
